# wargame2d

./: ARCHITECTURE.md  README.md  example_game.py  game_frame.py  game_runner.py  main.py  paths.py  pyproject.toml  simple_battle.py  test_random_agents_renderer.py  test_renderer.py
agents/: __init__.py  base_agent.py  team_intel.py
agents/greedy_agent/: __init__.py  greedy_agent.py
agents/llm_agent/: __init__.py  agent_details.py  compact_llm_agent.py  llm_agent.py  prompt_formatter.py
agents/llm_agent/actors/: analyst.py  analyst_compact.py  executer.py  executer_compact.py  game_deps.py  strategist.py  strategist_compact.py  watchdog.py
agents/llm_agent/helpers/: compact_state_formatter.py  dummy_state.txt  prompt_formatter.py
agents/llm_agent/prompts/: analyst.py  game_info.py  tactics.py
agents/random_agent/: random_agent.py
api/: app.py
env/: __init__.py  environment.py  scenario.py
env/core/: observations.py
env/entities/: aircraft.py  base.py
env/mechanics/: combat.py  sensors.py
env/rendering/: __init__.py  api.py  render_state.py  web_renderer.py
env/rendering/static/: index.html
infra/: openrouter.py
ui/: control_panel.html  ops_deck.html
