[project]
name = "wg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
rendering = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
]
