[project]
name = "wg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "logfire>=4.15.1",
    "pydantic-ai>=1.26.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
